--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   /* max-width: 1280px; */
   margin: 0 auto;
-  background-color : #f5f5f5;
+  background-color : #f9fafb;
   min-height: 100vh;
 }
 .form-group{
