--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,17 @@
 .animate-slide-out {
   animation: slideOut 0.3s ease-in-out forwards;
 }
+.custom-scrollbar::-webkit-scrollbar {
+  height: 3px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #f9fafb;
+  border-radius: 10px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
